--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install --only=dev && rimraf dist && tsc",
-    "preserve": "yarn run build",
-    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
-    "prestart": "yarn run build",
-    "start": "cross-env NODE_ENV=production node dist/index.js"
+    "start": "node dist/index.js",
+    "tsc": "tsc",
+    "postinstall": "yarn run tsc",
+    "watch-node": "nodemon dist/index.js",
+    "watch-ts": "tsc -w",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master"
   },
   "keywords": [],
   "author": "",
