--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
     "rimraf": "^3.0.2",
+    "typescript": "^4.4.3",
     "uuidv4": "^6.2.12",
     "ws": "^8.2.2"
   },
