--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "tsc": "tsc",
-    "postinstall": "yarn run tsc",
-    "watch-node": "nodemon dist/index.js",
-    "watch-ts": "tsc -w",
-    "deploy": "git add . && git commit -m Heroku && git push heroku master"
+    "build": "npm install --only=dev &&rimraf dist && tsc",
+    "preserve": "yarn run build",
+    "serve": "cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q dist/index.js\"",
+    "prestart": "yarn run build",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +19,6 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.7",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.3",
     "uuidv4": "^6.2.12",
     "ws": "^8.2.2"
   },
